--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to Git & GitHub Demo Page</h1>
     <p>This is a simple HTML and CSS project to demonstrate Git version control.</p>
     <p> we are learning devops</p>
+    <p> we are devops engineers</p>
 </body>
 </html>
