--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>This is a simple HTML and CSS project to demonstrate Git version control.</p>
     <p> we are learning devops</p>
     <p> we are devops engineers</p>
+    <p> we are devops engineers</p>
 </body>
 </html>
