Changed title on conflict-demo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>My Git Tutorial Website - Feature</h1>
+    <h1>My Git Tutorial Website - this is Feature</h1>
     <p>This is a simple HTML and CSS project to demonstrate Git version control.</p>
     <p> we are learning devops</p>
     <p> we are devops engineers</p>
