this is a new added

--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <p> we are devops engineers</p>
     <p> we are devops engineers</p>
     <p> this paragraph was added by benjamin</p>
+    <h2>Features</h2>
+<p>This project will showcase Git branching, merging, and conflict resolution.</p>
+
+<h2>Team Members</h2>
+<ul>
+  <li>Benjamin</li>
+  <li>Chioma</li>
+  <li>Ade</li>
+</ul>
 </body>
 </html>
