--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p> we are devops engineers</p>
     <p> we are devops engineers</p>
     <p> this paragraph was added by benjamin</p>
+    <p> this paragraph was added by benjamin</p>
+    <p> this paragraph was added by benjamin</p>
     <h2>Features</h2>
 <p>This project will showcase Git branching, merging, and conflict resolution.</p>
 
