--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p> this paragraph was added by benjamin</p>
     <p> this paragraph was added by benjamin</p>
     <p> this paragraph was added by benjamin</p>
+    <p> added login feature</p>
     <h2>Features</h2>
 <p>This project will showcase Git branching, merging, and conflict resolution.</p>
 
